DAS-29 fixing appointment spacing (#1283)

--- a/client/components/Schedule/DayView/TimeSlot/styles.scss
+++ b/client/components/Schedule/DayView/TimeSlot/styles.scss
@@ -17,6 +17,9 @@
   padding: 4px;
   margin-bottom: 2px;
   transition: 300ms all cubic-bezier(0.4, 0.0, 0.2, 1);
+  border-style: solid;
+  border-color: $primary-white;
+  border-width: 1px 0px 0px 1px;
   &_mark {
     overflow: hidden;
   }
